# pybooru

./: .gitignore  README.md  pyproject.toml  requirements.txt
pybooru/: __init__.py  booru.py  danbooru.py  gelbooru.py  konachan.py  rule34.py  safebooru.py  yandere.py
tests/: common.py  test_booru.py  test_danbooru.py  test_gelbooru.py  test_konachan.py  test_rule34.py  test_safebooru.py  test_yandere.py
