[tool.poetry]
name = "pybooru"
version = "0.0.1"
description = "booru parser"
authors = ["Onirei <occult.remi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.18.1"
ipython = "^7.24.1"
xmltodict = "^0.12.0"
isort = "^5.8.0"
pydantic = "^1.8.2"
coverage = "^5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
